--- a/017_CLASSES_SPECIAL_MEMBERS/sm_02.md
+++ b/017_CLASSES_SPECIAL_MEMBERS/sm_02.md
@@ -12,4 +12,5 @@ private:
 + _Nec_ sınıfının tanımında sentaks hatası vardır.   
 + _Nec_ sınıfının _default constructor_'ı _"not declared"_ durumdadır.
 + _Nec_ sınıfının _default constructor_'ı derleyici tarafından _delete_ edilmiştir.
++ _Nec_ sınıfının _default constructor_'ı derleyici tarafından _default_ edilmiştir.
 
