--- a/024_OPERATOR_OVERLOADING/oo_06.md
+++ b/024_OPERATOR_OVERLOADING/oo_06.md
@@ -1,4 +1,4 @@
-`### 14.satırda yazılan deyimde yapılan tüm fonksiyonları isimleriyle çağırın. (tek bir deyim yazılacak)
+`### //1 ile işaretlenen satırda yazılan deyimde yapılan tüm fonksiyonları isimleriyle çağırın. (tek bir deyim yazılacak)
 
 
 ```
@@ -11,6 +11,6 @@ int main()
 	int x = 12;
 	double d = 3.4;
 
-	cout << x << '+' << d << " = " << x + d << endl; 
+	cout << x << '+' << d << " = " << x + d << endl; //1
 }
 ```
