--- a/024_OPERATOR_OVERLOADING/oo_06.md
+++ b/024_OPERATOR_OVERLOADING/oo_06.md
@@ -1,4 +1,4 @@
-`### //1 ile işaretlenen satırda yazılan deyimde yapılan tüm fonksiyonları isimleriyle çağırın. (tek bir deyim yazılacak)
+### //1 ile işaretlenen satırda yazılan deyimde yapılan tüm fonksiyonları isimleriyle çağırın. (tek bir deyim yazılacak)
 
 
 ```
