--- a/036_CLASSES_NESTED_TYPES/ns_01.md
+++ b/036_CLASSES_NESTED_TYPES/ns_01.md
@@ -9,3 +9,19 @@ public:
 	using size_type = std::size_t;
 };
 ```
+<br><br>
+
+```
+#include <cstddef>
+
+class B {
+	void func()
+	{
+		size_type n{};
+		//...
+	}
+public:
+	using size_type = std::size_t;
+};
+```
+
