--- a/036_CLASSES_NESTED_TYPES/ns_01.md
+++ b/036_CLASSES_NESTED_TYPES/ns_01.md
@@ -24,3 +24,15 @@ public:
 };
 ```
 
+```
+#include <cstddef>
+
+class C {
+	size_type func()
+	{
+		return 1u;
+	}
+public:
+	using size_type = std::size_t;
+};
+```
