--- a/036_CLASSES_NESTED_TYPES/ns_01.md
+++ b/036_CLASSES_NESTED_TYPES/ns_01.md
@@ -36,3 +36,32 @@ public:
 	using size_type = std::size_t;
 };
 ```
+
+```
+include <cstddef>
+
+class C {
+	void func(size_type x)
+	{
+		//...
+	}
+public:
+	using size_type = std::size_t;
+};
+```
+
+```
+#include <cstddef>
+
+class D {
+	using size_type = std::size_t;
+	void func(size_type x);
+public:
+};
+
+
+void D::func(size_type x)
+{
+	//...
+}
+```
