--- a/036_CLASSES_NESTED_TYPES/ns_01.md
+++ b/036_CLASSES_NESTED_TYPES/ns_01.md
@@ -40,7 +40,7 @@ public:
 ```
 include <cstddef>
 
-class C {
+class D {
 	void func(size_type x)
 	{
 		//...
@@ -53,15 +53,25 @@ public:
 ```
 #include <cstddef>
 
-class D {
+class E {
 	using size_type = std::size_t;
 	void func(size_type x);
 public:
 };
 
 
-void D::func(size_type x)
+void E::func(size_type x)
 {
 	//...
 }
+```
+
+```
+#include <cstddef>
+
+class F {
+	F::size_type mval;
+public:
+	using size_type = std::size_t;
+};
 ```
