--- a/036_CLASSES_NESTED_TYPES/ns_01.md
+++ b/036_CLASSES_NESTED_TYPES/ns_01.md
@@ -56,7 +56,6 @@ public:
 class E {
 	using size_type = std::size_t;
 	void func(size_type x);
-public:
 };
 
 
@@ -74,4 +73,19 @@ class F {
 public:
 	using size_type = std::size_t;
 };
+```
+
+```
+#include <cstddef>
+
+class G {
+	using size_type = std::size_t;
+	size_type bar();
+};
+
+size_type G::bar()
+{
+	//...
+	return 1u;
+}
 ```
