--- a/036_CLASSES_NESTED_TYPES/ns_02.md
+++ b/036_CLASSES_NESTED_TYPES/ns_02.md
@@ -13,3 +13,21 @@ class A {
 	B mb;
 };
 ```
+
+```
+class A {
+	class B {
+		void bar()
+		{
+			auto sz1 = sizeof(mx);
+			auto sz2 = sizeof(A::mx);
+			foo();
+			A::foo();
+			++sz1;
+			++sz2;
+		}
+	};
+	int mx;
+	static void foo(){}
+};
+```
