--- a/036_CLASSES_NESTED_TYPES/ns_04.md
+++ b/036_CLASSES_NESTED_TYPES/ns_04.md
@@ -1,4 +1,4 @@
-### Mark the syntax errors, if any, in the following code sections
+#### Mark the syntax errors, if any, in the following code sections
 
 ```
 class A {
